Fix z-index value for cart and side menu

--- a/style/_navbar.scss
+++ b/style/_navbar.scss
@@ -36,6 +36,7 @@
     width: 100%;
     height: 100%;
     background-color: colors.$overlay-background;
+    z-index: 1;
     &.active {
       left: 0;
     }
@@ -64,6 +65,7 @@
     background-color: colors.$overlay-background;
     position: absolute;
     top: 0;
+    z-index: 1;
     display: none;
     right: 100%;
     opacity: 0;
